--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@
 
 body {
   margin: 0;
+  height: 100%;
 }
+
+/* Navbar */
 
 .navbar {
   background-color: #333;
@@ -32,7 +35,6 @@ body {
   color: inherit;
   text-decoration: none;
   display: flex;
-  height: 100%;
   align-items: center;
   padding: 0.25rem;
 }
@@ -43,4 +45,274 @@ body {
 
 .navbar li:hover {
   background-color: #777;
+}
+
+.container {
+  min-height: 100%;
+  margin-bottom: 50px;
+}
+
+/* About */
+
+h1 {
+  font-size: 3rem;
+  color: var(--primary-color);
+  margin: 2rem 0;
+  text-align: center;
+}
+
+.about {
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.about p {
+  margin-top: 50px;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+.presentation {
+  width: 70%;
+}
+
+/* Portfolio */
+#portfolio-container {
+  transform: translateY(50px);
+  animation: swoop-in 0.7s ease-in forwards;
+  width: 90vw;
+  margin: 0 auto;
+}
+
+.card {
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1.5rem;
+  max-width: 22rem;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.expand {
+  text-decoration: none !important;
+  margin-bottom: 20px;
+}
+
+.card:hover {
+  transform: scale(1.03);
+}
+
+.card img {
+  height: 250px;
+  object-fit: fill;
+  object-position: center;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-title {
+  margin: 10px auto;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.card-description {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.card-icons {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  font-size: 2em;
+}
+
+.card-buttons {
+  margin-top: 20px;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text-button {
+  text-decoration: none !important;
+  color: #000;
+}
+
+.text-button:hover {
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  color: #000;
+}
+
+.card-button {
+  background-color: #fff;
+  color: #000;
+  border-radius: 20px;
+  border: 1px solid #000;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+
+.card-button:hover {
+  background-color: #000;
+  color: #fff;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.card-button:focus {
+  outline: none;
+  box-shadow: 0px 0px 0px 2px #000;
+}
+
+/* Animation */
+
+.swoop-in {
+  position: relative;
+  animation: swoop-in 1s forwards;
+}
+
+@keyframes swoop-in {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Contact */
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.name-container,
+.email-container,
+.message-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 100%;
+}
+
+input[type="email"]:invalid {
+  border-color: red;
+}
+
+p {
+  margin-top: 5px;
+}
+
+.form-btn {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #1e90ff;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form-btn:hover {
+  background-color: #0077ff;
+}
+
+/* Footer */
+.footer {
+  height: 100px;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons a {
+  color: #333333;
+  margin: 0 10px;
+  font-size: 24px;
+}
+
+.social-icons a:hover {
+  color: #0066cc;
+}
+
+/* Resume */
+.proficiencies {
+  display: flex;
+  justify-content: center;
+  gap: 10vw;
+  height: 250px;
+  margin: 8vh;
+}
+
+.backend h2,
+.frontend h2 {
+  text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.2), 5px 5px 0px rgba(0, 0, 0, 0.15),
+    7px 7px 0px rgba(0, 0, 0, 0.1);
+}
+
+.backend div,
+.frontend div {
+  text-align: center;
+  word-wrap: break-word;
+}
+
+.rendered-text {
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
+  font-weight: bolder;
+}
+
+.resume {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+@media only screen and (max-width: 800px) {
+  .about {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+#portfolio-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
