--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,20 @@ body {
   height: 100%;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Set the minimum height to 100% of the viewport height */
+}
+
+.container {
+  flex-grow: 1; /* Take up all available space */
+}
+
+footer {
+  margin-top: auto; /* Push the footer to the bottom */
+}
+
 /* Navbar */
 
 .navbar {
@@ -255,7 +269,7 @@ p {
 
 /* Footer */
 .footer {
-  height: 100px;
+  height: 50px;
 }
 
 .social-icons {
