--- a/src/App.css
+++ b/src/App.css
@@ -4,33 +4,32 @@
 
 body {
   margin: 0;
-  height: 100%;
+  padding: 0;
+  background-color: #1a1d2b;
+  color: #fff;
 }
+/* End of Background */
 
-.wrapper {
+.page {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Set the minimum height to 100% of the viewport height */
-}
-
-.container {
-  flex-grow: 1; /* Take up all available space */
-}
-
-footer {
-  margin-top: auto; /* Push the footer to the bottom */
+  width: 80%;
+  margin: 0 auto;
+  color: #fff;
 }
 
 /* Navbar */
-
 .navbar {
-  background-color: #333;
-  color: white;
+  color: #fff;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2rem;
-  padding: 0 1rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 5rem;
+  z-index: 1;
+  height: 10vh;
+  background-color: #1a1d2b;
 }
 
 .logo {
@@ -54,7 +53,7 @@ footer {
 }
 
 .navbar li.active {
-  background-color: #555;
+  color: #d9b90f;
 }
 
 .navbar li:hover {
@@ -66,41 +65,218 @@ footer {
   margin-bottom: 50px;
 }
 
-/* About */
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: 100vh;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
 
-h1 {
-  font-size: 3rem;
-  color: var(--primary-color);
-  margin: 2rem 0;
+.sidebar ul {
+  height: 20%;
+  padding: 0;
+  margin: 0 auto;
+  list-style: none;
+}
+
+.sidebar li {
+  font-size: 32px;
+}
+
+.sidebar a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+}
+
+.vertical-line {
+  height: 100px;
+  width: 1px;
+  background-color: #4d4d4e;
+}
+.horizontal-line {
+  width: 50vw;
+  height: 1px;
+  margin: 50px auto;
+  background-color: #d9b90f;
+}
+
+/* Home */
+.home {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.home h1 {
+  font-size: 4rem;
+  margin: 0;
+  padding: 0;
+  text-align: start;
+  text-shadow: 2px 2px 0px #000;
+  animation-name: slideInDown;
+  animation-duration: 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.home h2 {
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  text-align: start;
+  text-shadow: 2px 2px 0px #000;
+  animation-name: slideInDown;
+  animation-duration: 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.home p {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 1rem 0;
+  padding: 0;
+  line-height: 1.7;
+  text-shadow: 1px 1px 0px #000;
+  animation-name: slideInUp;
+  animation-duration: 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.home .contact-btn {
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  width: 200px;
+  border-radius: 0.5rem;
+  background-color: #f3c623;
+  color: #333;
+  cursor: pointer;
+  animation-name: slideInUp;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
   text-align: center;
 }
 
-.about {
-  display: flex;
-  width: 90%;
-  margin: 0 auto;
+@keyframes slideInDown {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 
-.about p {
-  margin-top: 50px;
-  font-size: 1.2rem;
-  line-height: 1.5;
+@keyframes slideInUp {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 
-.presentation {
-  width: 70%;
-}
+/*---------*/
 
-.me-image {
-  height: 300px;
+h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 /* Portfolio */
 #portfolio-container {
   transform: translateY(50px);
   animation: swoop-in 0.7s ease-in forwards;
-  width: 90vw;
   margin: 0 auto;
+}
+
+/* Full Card */
+.full-card-container {
+  display: flex;
+  align-items: center;
+  width: 80vw;
+  height: 80vh;
+  margin: 0 auto;
+  position: relative;
+}
+
+.full-card-container img {
+  width: 30vw;
+  height: 50vh;
+  margin-right: 20px;
+}
+
+.full-card-container .tools {
+  font-size: 0.5rem;
+  line-height: 1.5;
+}
+
+.project {
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  height: 50vh;
+}
+
+.project p {
+  position: relative;
+}
+
+.project h2 {
+  color: #d9b90f;
+}
+
+.full-card-container .button-container {
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+  gap: 10px;
+}
+
+.full-card-container .tools-container {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  font-size: 0.8rem;
+  text-shadow: 0.5px 0.5px;
+}
+
+.full-card-container p {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.full-card-container a {
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.full-card-container a:hover {
+  color: #d9b90f;
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
+}
+/* ----------- */
+
+/* Row Card */
+
+.card-container {
+  position: relative;
+  margin-bottom: 2rem;
 }
 
 .card {
@@ -108,92 +284,97 @@ h1 {
   border-radius: 0.25rem;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   margin-bottom: 1.5rem;
-  max-width: 22rem;
   transition: all 0.2s ease-in-out;
-  cursor: pointer;
+  width: 500px;
+  height: 350px;
+  position: relative;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
-.expand {
-  text-decoration: none !important;
-  margin-bottom: 20px;
-}
-
-.card:hover {
-  transform: scale(1.03);
-}
-
-.card img {
-  height: 250px;
-  object-fit: fill;
-  object-position: center;
-}
-
-.card-body {
+.card-details {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(217, 185, 15);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
-.card-title {
-  margin: 10px auto;
-  font-size: 1.5em;
-  font-weight: bold;
+.card-container:hover .card-details {
+  opacity: 1;
 }
 
-.card-description {
-  width: 80%;
-  margin: 0 auto;
-}
-
-.card-icons {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 1rem;
-  font-size: 2em;
-}
-
-.card-buttons {
-  margin-top: 20px;
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.text-button {
-  text-decoration: none !important;
-  color: #000;
-}
-
-.text-button:hover {
-  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-  color: #000;
-}
-
-.card-button {
-  background-color: #fff;
-  color: #000;
-  border-radius: 20px;
-  border: 1px solid #000;
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: 500;
-  transition: all 0.3s ease;
-}
-
-.card-button:hover {
-  background-color: #000;
+.card-details .card-title {
   color: #fff;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  margin-left: 1rem;
+  text-shadow: 1px 1px 0px #000;
+  transform: translateY(-20px);
+  transition: transform 0.5s ease;
 }
 
-.card-button:focus {
-  outline: none;
-  box-shadow: 0px 0px 0px 2px #000;
+.card-container:hover .card-details .card-title {
+  transform: translateY(0);
 }
 
+.card-details p {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0 0 1rem 1rem;
+  transform: translateY(-20px);
+  transition: transform 0.5s ease;
+}
+
+.card-container:hover .card-details p {
+  transform: translateY(0);
+}
+
+.card-details .button-container {
+  display: flex;
+  position: absolute;
+  bottom: 10px;
+  left: 40%;
+  transform: translateY(20px);
+  transition: transform 0.5s ease;
+}
+
+.card-container:hover .card-details .button-container {
+  transform: translateY(0);
+}
+
+.card-details a {
+  margin: 0 0.5rem;
+  color: #fff;
+  font-size: 1.5rem;
+  text-shadow: 1px 1px 10px #000;
+}
+
+.card-details a svg {
+  margin-right: 0.5rem;
+}
+
+.card-details a svg:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
+}
+
+.tools-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* -------------- */
 /* Animation */
 
 .swoop-in {
@@ -327,10 +508,4 @@ p {
     justify-content: center;
     align-items: center;
   }
-}
-
-#portfolio-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
