--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,11 @@ body {
   background-color: #777;
 }
 
+.menu-icon {
+  display: none;
+}
+
+/* ---------- */
 .container {
   min-height: 100%;
   margin-bottom: 50px;
@@ -77,17 +82,9 @@ body {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-}
-
-.sidebar ul {
-  height: 20%;
-  padding: 0;
-  margin: 0 auto;
-  list-style: none;
-}
-
-.sidebar li {
-  font-size: 32px;
+  animation: slideInLeft;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 .sidebar a {
@@ -96,6 +93,21 @@ body {
   align-items: center;
   width: 100%;
   height: 50px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+.sidebar a svg {
+  font-size: 32px;
+  fill: #fff;
+}
+
+.sidebar a:hover svg {
+  fill: #d9b90f;
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
 }
 
 .vertical-line {
@@ -103,17 +115,21 @@ body {
   width: 1px;
   background-color: #4d4d4e;
 }
+
 .horizontal-line {
-  width: 50vw;
+  width: 100%;
   height: 1px;
-  margin: 50px auto;
-  background-color: #d9b90f;
+  margin: 10px 0;
+  background-color: rgb(217, 185, 15, 0.5);
 }
 
 /* Home */
 .home {
   font-size: 2rem;
   color: #fff;
+  animation-name: slideInLeft;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
 .home h1 {
@@ -122,10 +138,6 @@ body {
   padding: 0;
   text-align: start;
   text-shadow: 2px 2px 0px #000;
-  animation-name: slideInDown;
-  animation-duration: 1s;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
 }
 
 .home h2 {
@@ -134,10 +146,6 @@ body {
   padding: 0;
   text-align: start;
   text-shadow: 2px 2px 0px #000;
-  animation-name: slideInDown;
-  animation-duration: 1s;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
 }
 
 .home p {
@@ -147,13 +155,9 @@ body {
   padding: 0;
   line-height: 1.7;
   text-shadow: 1px 1px 0px #000;
-  animation-name: slideInUp;
-  animation-duration: 1s;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
 }
 
-.home .contact-btn {
+.home .btn {
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
   border: none;
@@ -162,29 +166,21 @@ body {
   background-color: #f3c623;
   color: #333;
   cursor: pointer;
-  animation-name: slideInUp;
+}
+
+.me {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-name: slideInRight;
   animation-duration: 1s;
-  animation-delay: 1s;
   animation-fill-mode: forwards;
-  text-align: center;
 }
 
-@keyframes slideInDown {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
-
-@keyframes slideInUp {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
+.me img {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
 }
 
 /*---------*/
@@ -196,11 +192,6 @@ h1 {
 }
 
 /* Portfolio */
-#portfolio-container {
-  transform: translateY(50px);
-  animation: swoop-in 0.7s ease-in forwards;
-  margin: 0 auto;
-}
 
 /* Full Card */
 .full-card-container {
@@ -216,9 +207,12 @@ h1 {
   width: 30vw;
   height: 50vh;
   margin-right: 20px;
+  animation-name: slideInLeft;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
-.full-card-container .tools {
+.full-card-container .full-card-container .tools {
   font-size: 0.5rem;
   line-height: 1.5;
 }
@@ -228,6 +222,9 @@ h1 {
   display: flex;
   flex-direction: column;
   height: 50vh;
+  animation-name: slideInRight;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
 .project p {
@@ -374,99 +371,91 @@ h1 {
   flex-wrap: wrap;
 }
 
-/* -------------- */
-/* Animation */
-
-.swoop-in {
-  position: relative;
-  animation: swoop-in 1s forwards;
+input::placeholder,
+textarea::placeholder {
+  color: #fff;
 }
 
-@keyframes swoop-in {
-  0% {
-    opacity: 0;
-    transform: translateY(100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+/* prevent input backgroun-color from changing color with autocomplete */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #fff !important;
 }
 
 /* Contact */
-form {
+.contact-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 20px;
+  gap: 10px;
+  animation: slideInLeft;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
-.name-container,
-.email-container,
-.message-container {
+.contact-form .input-container {
+  margin: 0;
+  padding: 0;
+}
+
+.details-container {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
+  gap: 5px;
+}
+
+.input-container input,
+.input-container textarea {
+  padding: 7.5px;
+  margin-bottom: 20px;
   width: 100%;
-}
-
-label {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-input,
-textarea {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  width: 100%;
-}
-
-input[type="email"]:invalid {
-  border-color: red;
-}
-
-p {
-  margin-top: 5px;
-}
-
-.form-btn {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #1e90ff;
-  color: #fff;
-  font-size: 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.form-btn:hover {
-  background-color: #0077ff;
-}
-
-/* Footer */
-.footer {
+  border: 0;
+  outline: 0;
+  background-color: transparent !important;
   height: 50px;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  text-shadow: 1px 1px rgb(30, 30, 30);
+  border-bottom: 1px solid rgb(217, 185, 15);
+}
+
+.contact-info {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  gap: 20px;
+  padding: 15px;
+  animation: slideInUp;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.contact-icon {
+  display: flex;
+  gap: 10px;
+  line-height: 0.8rem;
 }
 
 .social-icons {
   display: flex;
+  gap: 20px;
   justify-content: center;
-  align-items: center;
 }
 
-.social-icons a {
-  color: #333333;
-  margin: 0 10px;
-  font-size: 24px;
+.social-icons svg {
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  text-shadow: 1px 1px rgb(30, 30, 30);
 }
 
-.social-icons a:hover {
-  color: #0066cc;
+.social-icons svg:hover {
+  color: #d9b90f;
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
 }
 
 /* Resume */
@@ -507,5 +496,177 @@ p {
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+  }
+}
+
+/* Universal */
+
+.btn {
+  width: 100px;
+  height: 50px;
+  background-color: #d9b90f;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+}
+
+/* Animation */
+
+@keyframes swoop-in {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slideInUp {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .menu-icon {
+    display: block;
+    position: absolute;
+    right: 1px;
+    font-size: 2rem;
+  }
+
+  .logo {
+    position: absolute;
+    left: 10px;
+    top: 12px;
+  }
+
+  .navbar ul {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #1a1d2b;
+    width: 100%;
+    padding: 1rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .navbar li {
+    margin-left: 0;
+    margin-bottom: 1rem;
+  }
+
+  .navbar ul.open {
+    display: flex;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .home-sm {
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .full-card-container {
+    flex-direction: column;
+    height: 0%;
+  }
+
+  .full-card-container img {
+    width: 100%;
+    height: auto;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .project {
+    width: 100%;
+    height: auto;
+  }
+
+  .full-card-container .tools-container {
+    margin-top: 10px;
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    font-size: 0.7rem;
+    text-shadow: 0.5px 0.5px;
+  }
+
+  .full-card-container a {
+    font-size: 20px;
+  }
+
+  .portfolio-row {
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
+  .card-container {
+    padding: 10px;
+    width: 100%;
+  }
+
+  .card-container .card {
+    width: 100%;
+  }
+  .card-container .card-details p {
+    font-size: 0.9rem;
+  }
+
+  .contact-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact-icon {
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
   }
 }
